# programmieren_2_aufgabe_2-4

./: README.md  create_plot.py  main.py  pyproject.toml  read_data.py  read_pandas.py
