[project]
name = "programmieren_2_aufgabe_2-4"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "LuisWalcherMCI", email = "lwalcher@tsn.at"},
]
dependencies = ["streamlit>=1.57.0", "plotly>=6.7.0", "matplotlib>=3.10.9"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
